# xml-extractor

./: .gitignore  README.md  pyproject.toml
src/patent_extractor/: __init__.py  cli.py  errors.py  extractor.py  parser.py
tests/: __init__.py  test_extractor.py
tests/sample_data/: case_variations.xml  empty_doc_number.xml  malformed.xml  missing_doc_number.xml  missing_load_source.xml  multiple_app_refs.xml  namespaced.xml  no_application_reference.xml  priority_order.xml  standard.xml
