[project]
name = "patent-extractor"
version = "1.0.0"
description = "Extract doc-number values from patent XML documents with priority ordering"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
]

[project.scripts]
patent-extractor = "patent_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/patent_extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

